--- a/blog.css
+++ b/blog.css
@@ -1,9 +1,13 @@
 body {
   font-family: "Josefin Sans", "sans-serif";
+  width: 900px;
+  margin: auto;
 }
 .box {
   height: 100px;
   background-color: gray;
+  margin: auto;
+  width: 900px;
 }
 
 .name {
@@ -79,17 +83,28 @@ body {
 
 .foot-line {
   margin-bottom: 10px;
+  width: 500px;
 }
 
-.fab {
-  padding: 15px;
+.fabs {
+  display: flex;
   font-size: 35px;
-  width: 30px;
-  margin-right: 20px;
-  margin-left: 20px;
+}
+
+.fa,
+.a {
+  padding: 2em;
+  justify-content: space-evenly;
 }
 
 .fab:hover {
   opacity: 50%;
   color: red;
+}
+
+/* mobile */
+@media (min-width: 760px) {
+  .content {
+    margin: auto;
+  }
 }
