--- a/styles.css
+++ b/styles.css
@@ -70,7 +70,7 @@ h3 {
 }
 
 .more-about {
-  background-color: dimgray;
+  background-color: #680606;
   border-radius: 5px;
   padding: 15px 32px;
   text-align: center;
@@ -78,8 +78,12 @@ h3 {
   margin-bottom: 15px;
 }
 
+.a {
+  color: dimgray;
+}
 .projects-button {
-  background-color: dimgray;
+  background-color: #680606;
+  color: dimgray;
   border-radius: 5px;
   padding: 15px 32px;
   text-align: center;
@@ -92,28 +96,24 @@ h3 {
   font-weight: 500;
 }
 
-.projects-type-button a:link,
-a:visited,
-a:hover,
-a:active {
+.projects-type-button:hover {
   color: white;
   text-decoration: none;
+  opacity: 75%;
 }
 .list-1 {
   margin-bottom: 15px;
 }
 
 .more-about-button {
+  color: dimgray;
   font-size: 20px;
   font-weight: 500;
 }
 
-.more-about-button a:link,
-a:visited,
-a:hover,
-a:active {
-  color: white;
+.more-about-button:hover {
   text-decoration: none;
+  opacity: 75%;
 }
 
 .h-line-projects {
@@ -125,6 +125,21 @@ a:active {
 .h-line-contacts {
   margin: auto;
   width: 500px;
+}
+
+.fa {
+  padding: 20px;
+  font-size: 30px;
+  width: 50px;
+  text-align: center;
+  text-decoration: none;
+  border-radius: 50%;
+  background: dimgray;
+}
+
+.fa:hover {
+  opacity: 20%;
+  color: #efefef;
 }
 
 .h-line-footer {
